--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,17 +1,27 @@
-<h1>Topics</h1>
-<%= form_for Topic.new do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.submit %>
-<% end %>
-<ul>
-  <% @topics.each do |topic| %>
-    <li><%= topic.title %>
-      <ul>
-        <% topic.comments.each do |comment| %>
-          <li><%= comment.title %></li>
-        <% end %>
-      </ul>
-    </li>
+<%- model_class = Topic -%>
+<div class="page-header">
+  <h1>Topics</h1>
+</div>
+<%= paginate @topics  %>
+<div class="row">
+  <%= form_for Topic.new do |f| %>
+  <div class="col-sm-2">
+    <%= f.collection_select :category_id, Category.order(:title),:id, :title, include_blank: "Select Category", :required => true %>
+  </div>
+  <div class="col-sm-1">
+  </div>
+  <div class="col-sm-4">
+    <%= f.text_field(:title, :class => "form-control") %>
+  </div>
+  <div class="col-sm-2">
+    <%= f.submit(:class => "form-control btn btn-success") %>
+  </div>
   <% end %>
-</ul>
+</div>
+<div class="row">
+  <ul>
+    <% for topic in @topics %>
+      <li><h3><%= link_to topic.title, "/topics/#{topic.id}"%></h3></li>
+    <% end %>
+  </ul>
+</div>
