add production secret

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,26 +69,12 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-12">
+          <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sort results</h3>
-            <ul class="nav nav-list">
-              <li><%= link_to "Rank", "?path1"  %></li>
-              <li><%= link_to "Near", "/path2"  %></li>
-              <%= form_tag categories_path, :method => :get do %>
-                <p>
-                  <%= text_field_tag :search, params[:search] %>
-                  <%= submit_tag "Search Near", :name => nil %>
-                </p>
-              <% end %>
-              <li><%= link_to "Recent", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
       </div><!--/row-->
 
       <footer>
